src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_literals_tests__literal_dec_number_with_double_underscores.snap
---
source: src/parser/tests/parse_errors/parse_error_literals_tests.rs
expression: diagnostics
---
error[E007]: Unexpected token: expected KeywordSemicolon but found '__000'
  ┌─ <internal>:1:15
  │
1 │ PROGRAM exp 43__000; END_PROGRAM
  │               ^^^^^ Unexpected token: expected KeywordSemicolon but found '__000'
